# nfo-core

./: Cargo.toml  README.md
browser-testing/: Cargo.toml
browser-testing/src/: lib.rs
cli/: Cargo.toml
cli/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
executor/: Cargo.toml
executor/src/: lib.rs
inspect/: Cargo.toml
primitives/: Cargo.toml
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
