[package]
name = "nfo-browser-testing"
version = "0.1.0"
authors = ["nfo"]
edition = "2018"

[dependencies]
futures-timer = "3.0.2"
libp2p = { version = "0.28.1", default-features = false }
jsonrpc-core = "15.0.0"
serde = "1.0.106"
serde_json = "1.0.48"
wasm-bindgen = { version = "=0.2.67", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
futures = "0.3.4"

sc-rpc-api = { version = "0.8.0"}

nfo-cli = { path = "../cli", default-features = false, features = ["browser"] }

